package com.angerbytes.models;

import java.time.LocalDateTime;
import java.util.UUID;

public class Subscription {
    private final UUID id;
    private final Plan plan;
    private final Client client;
    private LocalDateTime invoiceDate, paymentDate;
    private boolean active;
    private final LocalDateTime createdAt;
    private LocalDateTime updatedAt;

    public Subscription(Plan plan, Client client, LocalDateTime invoiceDate, LocalDateTime paymentDate) {
        this.id = UUID.randomUUID();
        this.plan = plan;
        this.client = client;
        this.invoiceDate = invoiceDate;
        this.paymentDate = paymentDate;
        this.active = true;
        this.createdAt = LocalDateTime.now();
    }

    public Plan getPlan() {
        return plan;
    }


    public Client getClient() {
        return client;
    }

    public UUID getId() {
        return id;
    }

    public LocalDateTime getInvoiceDate() {
        return invoiceDate;
    }

    public void setInvoiceDate(LocalDateTime invoiceDate) {
        this.invoiceDate = invoiceDate;
    }

    public LocalDateTime getPaymentDate() {
        return paymentDate;
    }

    public void setPaymentDate(LocalDateTime paymentDate) {
        this.paymentDate = paymentDate;
    }

    public boolean isActive() {
        return active;
    }

    public void setActive(boolean active) {
        this.active = active;
    }

    public LocalDateTime getCreatedAt() {
        return createdAt;
    }

    public LocalDateTime getUpdatedAt() {
        return updatedAt;
    }

    public void setUpdatedAt(LocalDateTime updatedAt) {
        this.updatedAt = updatedAt;
    }

    @Override
    public String toString() {
        return "Subscription{" +
                ", plan=" + plan +
                ", client=" + client +
                ", invoiceDate=" + invoiceDate +
                ", paymentDate=" + paymentDate +
                ", active=" + active +
                ", createdAt=" + createdAt +
                ", updatedAt=" + updatedAt +
                '}';
    }
}
