@startuml

class Provider {
    - UUID id
    - String name
}

class Plan {
    - UUID id
    - UUID providerId
    - String name
    - int speedMbps
    - BigDecimal monthlyPrice
    - BigDecimal yearlyPrice
}

class Client {
    - UUID id
    - UUID providerId
    - String name
    - String email
    - String phone
}

class Subscription {
    - UUID id
    - UUID providerId
    - Client client
    - Plan plan
    - LocalDateTime invoiceDate
    - LocalDateTime paymentDate
    - boolean active
}

Provider "1" -- "*" Plan
Provider "1" -- "*" Client
Provider "1" -- "*" Subscription

Client "1" -- "*" Subscription
Plan "1" -- "*" Subscription

@enduml